Fix Image Game on Mobile

--- a/css/_game.scss
+++ b/css/_game.scss
@@ -113,12 +113,9 @@
             grid-template-rows: 1fr 1fr;
 
             .image {
-                justify-self: stretch;
 
                 img {
-                    object-fit: cover;
                     width: 100%;
-                    height: 100%;
                 }
             }
         }
