--- a/css/style.css
+++ b/css/style.css
@@ -1918,16 +1918,8 @@ section.newsletter-section {
       grid-template-rows: 1fr 1fr;
 }
 
-.challenge-game .challenge-question .image-game .image {
-  -ms-grid-column-align: stretch;
-      justify-self: stretch;
-}
-
 .challenge-game .challenge-question .image-game .image img {
-  -o-object-fit: cover;
-     object-fit: cover;
   width: 100%;
-  height: 100%;
 }
 
 .challenge-game .result {
